# local-evals

./: .env.example  .gitignore  AGENTS.md  GOAL.md  package-lock.json  package.json  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
baselines/: manifest.json
docs/: README.md
langfuse/: docker-compose.yml
registry/: judges.json  large-moe-pairs.json  load-profiles.json  models.json  runtime-snapshot.json
results/: baseline-comparison-liquid-stream17.jsonl  baseline-comparison-liquid-stream22.jsonl  baseline-comparison-liquid-stream8.jsonl  baseline-comparison-qwen-stream10.jsonl  baseline-comparison-qwen-stream17.jsonl  baseline-comparison-stream18-last-cell.jsonl  baseline-comparison-stream20-last-cell.jsonl  baseline-comparison-stream24-26b-offload.jsonl  baseline-comparison-stream28-qwen-uncached-single-task.jsonl  baseline-comparison-stream32-31b-q4-offload.jsonl  baseline-comparison.jsonl  final-selection-review-manifest.json  matrix-2026-06-07T10-52-18-029Z.jsonl  matrix-2026-06-07T11-05-50-387Z.jsonl  matrix-2026-06-07T11-08-01-420Z.jsonl  matrix-2026-06-07T11-08-11-880Z.jsonl  matrix-2026-06-07T11-08-22-161Z.jsonl  matrix-2026-06-07T11-08-32-534Z.jsonl  matrix-2026-06-07T11-18-54-078Z.jsonl  matrix-2026-06-07T11-24-51-998Z.jsonl  matrix-2026-06-07T11-31-25-946Z.jsonl  matrix-2026-06-07T11-50-34-088Z.jsonl  matrix-2026-06-07T11-53-01-973Z.jsonl  matrix-2026-06-07T11-54-53-937Z.jsonl  matrix-2026-06-07T12-13-20-405Z.jsonl  matrix-2026-06-07T12-14-13-926Z.jsonl  matrix-2026-06-07T13-03-06-317Z.jsonl  matrix-2026-06-07T13-16-59-439Z.jsonl  (+55 more)
(+81 files in other folders)
